--------
v5.0-git
--------

[mms] Honor nav_expanded preference (DIMP).
[mms] Allow admin to define list of safe e-mail addresses that will not
      experience HTML image blocking (Request #9129).
[mms] HTML compose editor uses Horde language for UI (Request #9084;
      leandro.damascena@gmail.com).
[mms] Add config option to disable multipart/related conversions
      (Request #9099).
[mms] Sentmail SQL driver now supports split read/write operation.
[mms] Pass compose message data to mailer backend via stream; much more
      efficient, especially with larger messages (Request #8909).
[mms] Add strip attachments support in DIMP.
[mms] Add PGP & S/MIME compose support to DIMP.
[mms] Check for incorrect identity on compose if a single recipient address
      is tied to a different identity than the sending identity.
[mms] Use CATENATE (RFC 4469), if available, to strip MIME parts (Request
      #8092).
[mms] Add preference to show flags created by other MUAs (Request #8882).
[mms] Added HTML signature support (Request #1406).
[mms] Simplified date sorting display (Ticket #8936).
[mms] Properly redirect messages pursuant to RFC 5322 [3.6.6].
[mms] Add redirect message capability to DIMP.
[mms] Add ability to add attachments to composed messages for advanced mobile
      browsers - disabled by default (MIMP).
[mms] Add checkbox interface to mailbox page for advanced mobile browsers -
      disabled by default (MIMP).
[mms] Add preference to allow viewing of all inline parts by default (MIMP).
[mms] Add hook to alter composed message details before sending.
[mms] DIMP now honors the 'allow_resume_all' configuration option.
[mms] Remove 'sort_limit' configuration option.
[mms] Mobile view no longer supports WML output.
[jan] Implement iTip viewer actions in DIMP (Request #8061).
[mms] Display alarm notifications in DIMP (Request #6232).
[mms] Auto-determine charset for text attachments (Bug #8858).