@@ -87,6 +87,11 @@ class IMP_Prefs_Ui
                 $ui->suppress[] = 'disposition_request_read';
             }
 
+            if (!$prefs->getValue('compose_html')) {
+                $ui->suppress[] = 'compose_html_font_family';
+                $ui->suppress[] = 'compose_html_font_size';
+            }
+
             /* Sort encodings. */
             if (!$prefs->isLocked('sending_charset')) {
                 asort($registry->nlsconfig['encodings']);
