@@ -2,6 +2,8 @@
 v5.0-git
 --------
 
+[mms] Add preference to define default font family/size for the HTML compose
+      editor.
 [mms] Honor nav_expanded preference (DIMP).
 [mms] Allow admin to define list of safe e-mail addresses that will not
       experience HTML image blocking (Request #9129).
